// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductResultScreen > matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col min-h-screen bg-gray-50 pb-24"
  >
    <section
      class="bg-white rounded-xl shadow p-6 mb-4 mt-4 mx-2"
    >
      <div
        class="flex flex-col items-center text-center"
      >
        <span
          class="text-3xl font-bold mb-1"
        >
          Test Product
        </span>
        <span
          class="text-lg text-gray-600 mb-1"
        >
          Test Brand
        </span>
        <span
          class="text-base flex items-center gap-1 mb-1"
        >
          🇺🇸
           
          United States
        </span>
        <span
          class="text-xs text-gray-400"
        >
          Barcode: 
          123456789
        </span>
      </div>
    </section>
    <section
      class="bg-white rounded-xl shadow p-4 mb-4 mx-2"
    >
      <div
        class="mb-2 font-semibold text-lg flex items-center gap-2"
      >
        🧬 Ownership
      </div>
      <div
        class="flex flex-wrap gap-2 justify-center"
      >
        <div
          class="flex items-center gap-1 px-3 py-2 rounded-full shadow-sm border bg-gray-100 text-gray-800"
          style="font-weight: normal; border-width: 1px;"
        >
          <span>
            Test Brand
          </span>
          <span>
            🇺🇸
          </span>
          <span
            class="ml-1 px-2 py-0.5 rounded text-xs font-medium bg-white border border-gray-200"
          >
            Brand
          </span>
          <span
            class="mx-2 text-gray-400"
          >
            →
          </span>
        </div>
        <div
          class="flex items-center gap-1 px-3 py-2 rounded-full shadow-sm border bg-gray-100 text-gray-800"
          style="font-weight: normal; border-width: 1px;"
        >
          <span>
            Parent Company Inc
          </span>
          <span>
            🇺🇸
          </span>
          <span
            class="ml-1 px-2 py-0.5 rounded text-xs font-medium bg-white border border-gray-200"
          >
            Parent Company
          </span>
        </div>
      </div>
    </section>
    <section
      class="bg-white rounded-xl shadow p-4 mb-4 mx-2"
    >
      <div
        class="mb-2 font-semibold text-lg flex items-center gap-2"
      >
        📊 Confidence
      </div>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="px-3 py-1 rounded-full font-semibold text-sm bg-blue-100 text-blue-800"
        >
          High
           (
          92
          %)
        </span>
        <button
          class="ml-2 text-xs underline text-blue-600"
          title="Confidence is based on data quality, source reliability, and agent agreement."
        >
          What affects this?
        </button>
      </div>
      <div
        class="mt-2 flex gap-2"
      >
        <button
          class="px-3 py-1 rounded bg-green-100 text-green-800 font-medium text-xs"
        >
          🙋 Confirmed
        </button>
        <button
          class="px-3 py-1 rounded bg-red-100 text-red-800 font-medium text-xs"
        >
          ❗ Flag Incorrect
        </button>
      </div>
    </section>
    <section
      class="bg-white rounded-xl shadow p-4 mb-4 mx-2"
    >
      <div
        class="flex items-center justify-between mb-2"
      >
        <span
          class="font-semibold text-lg flex items-center gap-2"
        >
          🧪 Trace
        </span>
        <button
          class="text-xs underline text-blue-600"
        >
          Show
           Steps
        </button>
      </div>
    </section>
    <div
      class="fixed bottom-0 left-0 w-full bg-white border-t shadow-lg flex justify-around py-3 z-50"
    >
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-blue-100 text-blue-800 font-medium"
      >
        🔄 Retry
      </button>
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-green-100 text-green-800 font-medium"
      >
        🙋 Confirm
      </button>
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-red-100 text-red-800 font-medium"
      >
        ❗ Flag
      </button>
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-gray-100 text-gray-800 font-medium"
      >
        📝 Enter Manually
      </button>
    </div>
  </div>
</div>
`;

exports[`ProductResultScreen trace and verification > matches snapshot for verified result 1`] = `
<div>
  <div
    class="flex flex-col min-h-screen bg-gray-50 pb-24"
  >
    <section
      class="bg-white rounded-xl shadow p-6 mb-4 mt-4 mx-2"
    >
      <div
        class="flex flex-col items-center text-center"
      >
        <span
          class="text-3xl font-bold mb-1"
        >
          Test Product
        </span>
        <span
          class="text-lg text-gray-600 mb-1"
        >
          Test Brand
        </span>
        <span
          class="text-base flex items-center gap-1 mb-1"
        >
          🇺🇸
           
          United States
        </span>
      </div>
    </section>
    <section
      class="bg-white rounded-xl shadow p-4 mb-4 mx-2"
    >
      <div
        class="mb-2 font-semibold text-lg flex items-center gap-2"
      >
        🧬 Ownership
      </div>
      <div
        class="flex flex-wrap gap-2 justify-center"
      >
        <div
          class="flex items-center gap-1 px-3 py-2 rounded-full shadow-sm border bg-gray-100 text-gray-800"
          style="font-weight: normal; border-width: 1px;"
        >
          <span>
            OK Snacks A/S
          </span>
          <span>
            🇺🇸
          </span>
          <span
            class="ml-1 px-2 py-0.5 rounded text-xs font-medium bg-white border border-gray-200"
          >
            Brand
          </span>
          <span
            class="mx-2 text-gray-400"
          >
            →
          </span>
        </div>
        <div
          class="flex items-center gap-1 px-3 py-2 rounded-full shadow-sm border bg-gray-100 text-gray-800"
          style="font-weight: normal; border-width: 1px;"
        >
          <span>
            Kims A/S
          </span>
          <span>
            🇺🇸
          </span>
          <span
            class="ml-1 px-2 py-0.5 rounded text-xs font-medium bg-white border border-gray-200"
          >
            Parent
          </span>
          <span
            class="mx-2 text-gray-400"
          >
            →
          </span>
        </div>
        <div
          class="flex items-center gap-1 px-3 py-2 rounded-full shadow-sm border bg-gray-100 text-gray-800"
          style="font-weight: normal; border-width: 1px;"
        >
          <span>
            Orkla ASA
          </span>
          <span>
            🇺🇸
          </span>
          <span
            class="ml-1 px-2 py-0.5 rounded text-xs font-medium bg-white border border-gray-200"
          >
            Ultimate Owner
          </span>
        </div>
      </div>
    </section>
    <section
      class="bg-white rounded-xl shadow p-4 mb-4 mx-2"
    >
      <div
        class="mb-2 font-semibold text-lg flex items-center gap-2"
      >
        📊 Confidence
      </div>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="px-3 py-1 rounded-full font-semibold text-sm bg-blue-100 text-blue-800"
        >
          High
           (
          88
          %)
        </span>
        <button
          class="ml-2 text-xs underline text-blue-600"
          title="Confidence is based on data quality, source reliability, and agent agreement."
        >
          What affects this?
        </button>
      </div>
      <div
        class="mt-2 flex gap-2"
      >
        <button
          class="px-3 py-1 rounded bg-green-100 text-green-800 font-medium text-xs"
        >
          🙋 Confirmed
        </button>
        <button
          class="px-3 py-1 rounded bg-red-100 text-red-800 font-medium text-xs"
        >
          ❗ Flag Incorrect
        </button>
      </div>
    </section>
    <section
      class="bg-white rounded-xl shadow p-4 mb-4 mx-2"
    >
      <div
        class="flex items-center justify-between mb-2"
      >
        <span
          class="font-semibold text-lg flex items-center gap-2"
        >
          🧪 Trace
        </span>
        <button
          class="text-xs underline text-blue-600"
        >
          Show
           Steps
        </button>
      </div>
    </section>
    <div
      class="fixed bottom-0 left-0 w-full bg-white border-t shadow-lg flex justify-around py-3 z-50"
    >
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-blue-100 text-blue-800 font-medium"
      >
        🔄 Retry
      </button>
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-green-100 text-green-800 font-medium"
      >
        🙋 Confirm
      </button>
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-red-100 text-red-800 font-medium"
      >
        ❗ Flag
      </button>
      <button
        class="flex-1 mx-2 px-3 py-2 rounded bg-gray-100 text-gray-800 font-medium"
      >
        📝 Enter Manually
      </button>
    </div>
  </div>
</div>
`;
